Attempt to fix date input on mobile safari

--- a/src/index.css
+++ b/src/index.css
@@ -122,3 +122,8 @@ section {
   box-sizing: border-box;
   padding: 0;
 }
+input[type="date"] {
+  display: block;
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+}
